// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeStatus should show expired status 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-danger-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center my-6"
  >
    <div
      class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-danger-400"
    >
      <div
        class="sc-bdvvtL qGXhc"
        height="20"
        width="20"
      >
        <svg>
          circle-cross.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    >
      <div
        class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
      >
        This transaction has expired.
      </div>
    </div>
  </div>
</div>
`;

exports[`ExchangeStatus should show failed status 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-danger-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center my-6"
  >
    <div
      class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-danger-400"
    >
      <div
        class="sc-bdvvtL qGXhc"
        height="20"
        width="20"
      >
        <svg>
          circle-cross.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    >
      <div
        class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
      >
        This transaction has failed.
      </div>
    </div>
  </div>
</div>
`;

exports[`ExchangeStatus should show refunded status 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center my-6"
  >
    <div
      class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
    >
      <div
        class="sc-bdvvtL qGXhc"
        height="20"
        width="20"
      >
        <svg>
          circle-exclamation-mark.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    >
      <div
        class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
      >
        This transaction has been refunded.
      </div>
    </div>
  </div>
</div>
`;

exports[`ExchangeStatus should show verifying status 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center my-6"
  >
    <div
      class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
    >
      <div
        class="sc-bdvvtL qGXhc"
        height="20"
        width="20"
      >
        <svg>
          circle-exclamation-mark.svg
        </svg>
      </div>
    </div>
    <div
      class="flex flex-col w-full"
    >
      <div
        class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
      >
        This transaction is being verified by the provider.
      </div>
    </div>
  </div>
</div>
`;
